# wcr-for-ts-augmentations

./: .gitignore  README.md  experiments.ipynb  pyproject.toml
genrisk/generation/: base.py  tcn_vae.py  vae.py
genrisk/utils/: create_immutable_features.py
