[tool.poetry]
name = "genrisk"
version = "1.0.0"
description = "Risk under synthetic shift in time series data"
authors = ["Vitaliy Pozdnyakov <pozdnyakov@airi.net>"]
license = "MIT licence"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
